# mixes

./: .gitignore  DGMM.py  MIT-LICENSE.txt  README.md  main.py  pyproject.toml  tests.py  try.py
data/: olive.csv
dgmm/: AbstractDGMM.py  CinziaDGMM.py  Evaluator.py  GMM.py  GMN.py  GaussianDistrib.py  GradientDescentDGMM.py  SamplingDGMM.py  SkewGMM.py  __init__.py  tests.py
experiments/: clustering-experiment-annealing.ipynb  clustering-experiment-regularization.ipynb  clustering-experiment.ipynb  distribution-experiment.py  example.ipynb  geyser-experiment.ipynb  utils.py
mixes/: AbstractDGMM.py  DGMM.py  Evaluator.py  GMM.py  GMN.py  GradientDescentDGMM.py  SamplingDGMM.py  SelosseDGMM.py  SkewGMM.py  ViroliDGMM.py  __init__.py  stopping_criterion.py  tests.py  utils.py
